# calibre-template-functions

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-tests.yml  run_in_pyenv.yml
src/calibre_template_functions/: zero_pad_series.py
tests/: test_zero_pad_series.py
tests/stubs/: calibre.py
