[tool.poetry]
name = "calibre-template-functions"
version = "0.1.0"
description = ""
authors = ["Nathan Dines <nathandines@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
mypy = "^1.8.0"

[tool.ruff]
extend-select = ["I"]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
